--- a/Week-1/html-page/style.css
+++ b/Week-1/html-page/style.css
@@ -45,6 +45,7 @@ header > div{
     width: 70%;
     top:40px;
     left: 400px;
+    font-family: 'Lato', sans-serif;
 }
 
 header > div > h2, p{
@@ -76,6 +77,7 @@ main{
 main > table {
     width: 100%;
     border-collapse: collapse;
+    font-family: 'Lato', sans-serif;
 }
 
 tbody tr:nth-child(even){
@@ -113,6 +115,7 @@ footer > .current_album > .current_album_image > img{
 footer .current_album > .description{
     padding: 10px;
     width: 300px;
+    font-family: 'Lato', sans-serif;
 }
 
 footer .current_album > .description > .content > p{
